[gd_scene load_steps=36 format=2]

[ext_resource path="res://images/Platformer Art Complete Pack/Base pack/Player/p3_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://images/Platformer Art Complete Pack/Base pack/Player/p2_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Music/Win - Master.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/Main - Master.wav" type="AudioStream" id=5]
[ext_resource path="res://images/Platformer Art Complete Pack/Base pack/Items/gemBlue.png" type="Texture" id=6]
[ext_resource path="res://SFX/Shot 2.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/PlayerDeath.gd" type="Script" id=8]
[ext_resource path="res://Music/Climbing - Master.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Powered Up - Master.wav" type="AudioStream" id=10]
[ext_resource path="res://SFX/Jump 1.wav" type="AudioStream" id=11]
[ext_resource path="res://Music/Lose - Master.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.733, 45.3265 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 96, 72, 96 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "climb",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "hang",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 140, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 210, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 280, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 0, 70, 94 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 94, 70, 94 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 70, 94, 70, 94 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 140, 94, 70, 94 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 420, 94, 70, 94 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "climb",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "hang",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftPlayer" type="AnimatedSprite" parent="."]
position = Vector2( -36, 0 )
frames = SubResource( 12 )
animation = "climb"
flip_h = true

[node name="RightPlayer" type="AnimatedSprite" parent="."]
position = Vector2( 36, 0 )
frames = SubResource( 23 )
animation = "climb"

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 800
lifetime = 3.0
one_shot = true
texture = ExtResource( 6 )
spread = 180.0
initial_velocity = 140.78
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="DeathParticles"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DeathParticles"]
stream = ExtResource( 7 )

[node name="LoseMusic" type="AudioStreamPlayer" parent="DeathParticles"]
stream = ExtResource( 12 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Music" type="Node2D" parent="."]

[node name="MainTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )
autoplay = true

[node name="ClimbTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 9 )
volume_db = -80.0
autoplay = true

[node name="PowerTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 10 )
volume_db = -80.0
autoplay = true

[node name="WinTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 4 )
[connection signal="kill" from="." to="." method="_on_Player_kill"]
[connection signal="timeout" from="DeathParticles/Timer" to="DeathParticles" method="_on_Timer_timeout"]
[connection signal="finished" from="Music/MainTheme" to="." method="_on_MainTheme_finished"]
[connection signal="finished" from="Music/WinTheme" to="." method="_on_WinTheme_finished"]
